[package]
name = "tower-grpc-learn"
version = "0.1.0"
authors = ["qupeng <qupeng@pingcap.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
bytes = "0.4"
futures = "0.1"
hyper = "0.12"
prost = "0.5"
tokio = "1.18"
http = "0.1"
tokio-threadpool = "0.1"
tokio-executor = "0.1"
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-util = "0.1"

[dependencies.tower-grpc]
git = "https://github.com/tower-rs/tower-grpc"

[dependencies.tower-grpc-build]
git = "https://github.com/tower-rs/tower-grpc"
features = ["tower-hyper"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "codegen"
path = "src/codegen.rs"
